# lm-sanaga

./: .env.example  .gitignore  Cargo.toml  data.db  justfile  roadmap  test.ts
benchmark_inference/: Cargo.toml
sn_ann/: Cargo.toml
sn_api/: Cargo.toml
sn_backend/: Cargo.toml
sn_backend/src/: app_state.rs  error.rs  main.rs  server.rs
sn_backend/src/application/: mod.rs
sn_backend/src/application/conversation/: service.rs
sn_backend/src/application/embedding/: service.rs
sn_backend/src/application/message/: service.rs
sn_backend/src/application/model/: service.rs
sn_backend/src/application/session/: service.rs
sn_backend/src/clients/: ann.rs  mod.rs
sn_backend/src/db/: connection.rs  init_database.rs  mod.rs
sn_backend/src/db/entities/: conversation.rs  embedding.rs  message.rs  mod.rs  session.rs
sn_backend/src/db/migration/: Cargo.toml
sn_backend/src/db/migration/src/: lib.rs  m20220101_000001_create_table_init.rs
sn_backend/src/db/repository/: conversation.rs  embedding.rs  message.rs  mod.rs  session.rs
sn_backend/src/domain/conversation/: aggregate.rs  entity.rs  mod.rs  repository.rs
sn_backend/src/domain/embedding/: entity.rs  repository.rs
sn_backend/src/domain/message/: aggregate.rs  entity.rs  mod.rs  repository.rs  value_object.rs
sn_backend/src/domain/model/: value_object.rs
sn_backend/src/domain/session/: entity.rs  repository.rs
sn_backend/src/dto/: mod.rs  model_runtime.rs
sn_backend/src/handlers/: model.rs
sn_backend/src/infrastructure/db/: connection.rs  init_database.rs  mod.rs
sn_backend/src/infrastructure/db/migration/src/: m20220101_000001_create_table_init.rs
sn_backend/src/interfaces/: mod.rs
sn_backend/src/interfaces/conversation/: controller.rs  route.rs
sn_backend/src/interfaces/message/: controller.rs  route.rs
sn_backend/src/interfaces/model/: controller.rs  route.rs
sn_backend/src/interfaces/session/: controller.rs  route.rs
sn_backend/src/middleware/: mod.rs
sn_backend/src/model/: controller.rs  mod.rs  route.rs
sn_backend/src/routes/: mod.rs  model.rs
sn_backend/src/server/: app_state.rs  http_server.rs  mod.rs
sn_backend/src/server/conversation/: controller.rs  mod.rs  route.rs
sn_backend/src/server/middleware/: layer_api.rs
sn_backend/src/server/model/: controller.rs  mod.rs  route.rs
sn_backend/src/server/session/: controller.rs  mod.rs  route.rs
sn_backend/src/server/text/: controller.rs  route.rs
sn_backend/src/text/: controller.rs  route.rs
sn_backend/src/use_cases/: mod.rs
sn_backend/src/use_cases/conversation/: generate_name_use_case.rs  mod.rs
sn_backend/src/use_cases/message/: generate_embedding_use_case.rs  generate_text_use_case.rs  mod.rs
sn_backend/src/use_cases/model/: mod.rs  run_model_use_case.rs
sn_backend/src/utils/: mod.rs  parse_json_model_id.rs  sse_response_builder.rs  stream_channel.rs  tokio_bridge.rs
sn_cli/: Cargo.toml
sn_cli/src/: cli.rs  client.rs  error.rs  main.rs
sn_cli/src/commands/model/: list.rs  mod.rs  ps.rs  run.rs  stop.rs
sn_cli/src/commands/run/: run.rs
sn_cli/src/prompt/: conversation.rs  mod.rs  prompt.rs  session.rs
sn_cli/src/utils/: mod.rs  stream_response_bytes.rs  typewriter.rs
sn_core/: Cargo.toml
sn_core/src/: conversation.rs  error.rs  lib.rs  logger.rs
sn_core/src/dto/: mod.rs  model_runtime.rs
sn_core/src/server/: defauft_config.rs  mod.rs  routes.rs
sn_core/src/server/payload/: create_session_request.rs  generate_text_request.rs  mod.rs  run_model_metadata_response_sse.rs  run_model_request.rs  run_model_response_sse.rs  text_generated_metadata_response_sse.rs
sn_core/src/server/payload/ann/: mod.rs  partition_status_response.rs  search_request.rs  search_response.rs
sn_core/src/server/payload/backend/: generate_text_request.rs  generate_text_response.rs  list_running_model_response.rs  mod.rs  run_model_metadata_response_sse.rs  run_model_request.rs  run_model_response.rs  text_generated_metadata_response_sse.rs
sn_core/src/types/: ann_item.rs  conversation.rs  document.rs  message.rs  message_pair.rs  message_stats.rs  mod.rs  session.rs  stream_data.rs  tool.rs
sn_core/src/utils/: rw_lock.rs
sn_inference/: Cargo.toml
sn_inference/src/: error.rs  lib.rs  module.rs  quantized.rs  runner.rs
sn_inference/src/ann/: mod.rs  node.rs  score.rs  store.rs
sn_inference/src/cache/: k_v_cache.rs  mod.rs
sn_inference/src/cache/k_v_cache/: k_v_cache.rs  k_v_cache_session.rs  mod.rs
sn_inference/src/chat_template/: _t_qwen3  _t_qwen3_emb  chat_template.php  chat_template.rs  mod.rs
sn_inference/src/config/: config.rs  config_model.rs  config_tokenizer_custom.rs
sn_inference/src/config/config_models/: llama.rs  mod.rs  quantization_config.rs  qwen3.rs
sn_inference/src/factory/: k_v_cache.rs  mask.rs  mod.rs  model.rs  rope.rs
sn_inference/src/mask/: mask.rs
sn_inference/src/model/: mod.rs  model.rs  model_kind.rs  model_runtime.rs  weight.rs
sn_inference/src/model/models/: mod.rs
sn_inference/src/model/models/default/: mod.rs  model.rs  rope.rs  transformer_block.rs
sn_inference/src/model/models/llama/: attention.rs  llama.rs  mlp.rs  rope.rs  transformer_block.rs
sn_inference/src/model/models/mistral/: instance.rs
sn_inference/src/model/models/qwen3/: attention.rs  mlp.rs  mod.rs  qwen3.rs  rope.rs  transformer_block.rs
sn_inference/src/token/: mod.rs  token_embedding.rs  token_embedding_generator.rs  token_generated_info.rs  token_generator  token_generator.rs  token_stats.rs  token_stream_manager.rs
sn_inference/src/tokenizer/: tokenizer.rs
sn_inference/src/utils/: d_type.rs  maybe_quantized.rs  mod.rs  rms_norm.rs  rw_lock.rs  scaled_dot_product_attention.php  scaled_dot_product_attention.rs  string.rs  wired_limit.rs
sn_inference/src/utils/mlx/: debug.rs  get_peak_memory.rs  metal_device_info.rs  metal_is_available.rs  mlx_compute_lock.rs  mod.rs  set_wired_limit.rs  similarity.rs  synchronize.rs
sn_inference/src/utils/tokenizer/: mod.rs  pad_encode_batch.rs
src/: conversation.rs  error.rs  main.rs  module.rs  quantized.rs  runner.rs
(+69 files in other folders)
