[workspace]
members = [
    "sn_backend",
    "sn_api",
    "sn_core",
    "sn_inference"
]

[workspace.dependencies]
log="0.4.27"
env_logger = "0.11.8"
thiserror="2.0.12"
serde_json="1.0.140"
mlx-rs = "0.25.1"
tokenizers = "0.21.4-dev.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
minijinja="2.11.0"
glob="0.3.2"
[workspace.dev-dependencies]


#[profile.release]
#debug = 0
