[workspace]
members = [
    "sn_cli",
    "sn_backend",
    "sn_core",
    "sn_inference"
]
[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
env_logger = "0.11.8"
thiserror="2.0.12"
serde_json="1.0.140"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tokio = { version = "1.46.1", features = ["full"]  }
crossbeam = "0.8.4"
[workspace.dev-dependencies]

#[profile.release]
#debug = 0
