[workspace]
resolver = "3"
members = [
    "sn_cli",
    "sn_backend",
    "sn_core",
    "sn_inference",
    "benchmark_inference",
    "sn_backend/src/db/migration"
]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sea-orm= { version="1.1.14", features = [ "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
thiserror="2.0.12"
serde_json="1.0.140"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tokio = { version = "1.46.1", features = ["full"]  }
crossbeam = "0.8.4"
dotenv= "0.15.0"
rayon = "1.10.0"