[package]
name = "lm-sanaga"
version = "0.1.0"
edition = "2024"

[features]
#dhat-heap = []

[dependencies]
sn_inference = { path = "../sn_inference" }
sn_core = { path = "../sn_core" }

axum = { version = "0.8.4", features = ["macros"] }
tracing = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower = { version = "0.5.2" }
tower-http = {version = "0.6.6", features = ["trace"] }
http = "1.3.1"
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
