[package]
name = "lm-sanaga"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
sn_inference = { path = "../sn_inference" }
sn_core = { path = "../sn_core" }

axum = { version = "0.8.4", features = ["macros"] }
tower-http = {version = "0.6.6", features = ["trace"] }
http = "1.3.1"
tokio-stream = "0.1.17"
futures = "0.3.31"

tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
dotenv = { workspace = true }
rayon = { workspace = true}
sea-orm = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
