[package]
name = "cli-sanaga"
version = "0.1.0"
edition = "2024"

[dependencies]
sn_core = { path = "../sn_core" }

clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }

thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }