[package]
name = "cli-sanaga"
version = "0.1.0"
edition = "2024"

[dependencies]
sn_core = { path = "../sn_core" }

clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
futures-util = "0.3.31"
bytes = "1.10.1"
inquire = "0.7.5"

thiserror = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
