[package]
name = "cli-sanaga"
version = "0.1.0"
edition = "2024"

[dependencies]
sn_core = { path = "../sn_core" }

reqwest = { workspace = true, features = ["json", "stream"] }
futures-util = "0.3.31"
bytes = "1.10.1"
inquire = "0.7.5"
indicatif = "0.18.0"
thiserror = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.41", features = ["derive"] }
