[package]
name = "sn_inference"
version = "0.1.0"
edition = "2024"

[dependencies]
sn_core = { path = "../sn_core" }
mlx-rs = "0.25.1"
mlx-sys = "0.2.0"
serde_json={workspace = true}
serde = { workspace = true }
walkdir ="2.5.0"
glob="0.3.2"
hex = "0.4.3"
thiserror={workspace = true}
itertools = "0.14.0"
rayon = "1.10.0"
crossbeam = "0.8.4"
dhat = "0.3.3"
memmap2 = "0.9.7"
tracing = { workspace = true }
tokenizers = "0.21.4-dev.0"
minijinja="2.11.0"